--- a/lab1_final.ipynb
+++ b/lab1_final.ipynb
@@ -28,6 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso 1: Realice una exploración rápida de sus datos.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -181,11 +188,17 @@
     }
    ],
    "source": [
-    "# Inciso 1: Realice una exploración rápida de sus datos.\n",
     "# Vista rápida del dataframe\n",
     "print(df.head())\n",
     "print(df.info())\n",
     "print(df.describe(include='all'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso 2: Indique el tipo de cada una de las variables del conjunto de datos (cualitativa o categórica cuantitativa continua cuantitativa discreta)\n"
    ]
   },
   {
@@ -237,13 +250,19 @@
     }
    ],
    "source": [
-    "# Inciso 2: Indique el tipo de cada una de las variables del conjunto de datos (cualitativa o categórica cuantitativa continua cuantitativa discreta)\n",
     "# Identificar tipos de variables\n",
     "for column in df.columns:\n",
     "    if df[column].dtype == 'object':\n",
     "        print(f'{column}: Cualitativa')\n",
     "    else:\n",
     "        print(f'{column}: Cuantitativa')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso 3: Incluya los gráficos exploratorios siendo consecuentes con el tipo de variable que están representando.\n"
    ]
   },
   {
@@ -343,7 +362,6 @@
     }
    ],
    "source": [
-    "# Inciso 3: Incluya los gráficos exploratorios siendo consecuentes con el tipo de variable que están representando.\n",
     "# Verificar las columnas existentes en el dataframe antes de graficar\n",
     "cuantitativas_continuas = ['Age', 'First.sexual.intercourse', 'Smokes.years', 'Smokes.packs.per.year', \n",
     "                           'Hormonal.Contraceptives.years', 'IUD.years', 'STDs.Time.since.first.diagnosis', \n",
@@ -371,6 +389,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso 4: Aísle las variables numéricas de las categóricas y realice un análisis de correlación entre las mismas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -395,7 +420,6 @@
     }
    ],
    "source": [
-    "# Inciso 4: Aísle las variables numéricas de las categóricas y realice un análisis de correlación entre las mismas.\n",
     "# Aislando variables numéricas y categóricas\n",
     "numericas = ['Age', 'Number.of.sexual.partners', 'First.sexual.intercourse', 'Num.of.pregnancies', \n",
     "             'Smokes.years', 'Smokes.packs.per.year', 'Hormonal.Contraceptives.years', 'IUD.years', \n",
@@ -420,6 +444,13 @@
     "    plt.show()\n",
     "else:\n",
     "    print(\"No hay columnas numéricas para calcular la correlación.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso 5: Utilice las variables categóricas, cree tablas de frecuencia, proporción, gráficas de barras, etc.\n"
    ]
   },
   {
@@ -597,12 +628,18 @@
     }
    ],
    "source": [
-    "# Inciso 5: Utilice las variables categóricas, cree tablas de frecuencia, proporción, gráficas de barras, etc.\n",
     "for col in categoricas:\n",
     "    print(f\"Frecuencia de {col}:\")\n",
     "    print(df[col].value_counts(normalize=True))\n",
     "    df[col].value_counts(normalize=True).plot(kind='bar', title=col)\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso 6: Determine el tratamiento a seguir con los valores faltantes.\n"
    ]
   },
   {
@@ -692,7 +729,6 @@
     }
    ],
    "source": [
-    "# Inciso 6: Determine el tratamiento a seguir con los valores faltantes.\n",
     "# Verificar valores faltantes\n",
     "print(df.isnull().sum())\n",
     "\n",
@@ -709,17 +745,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso 7: Estudie si es posible hacer transformaciones en las variables categóricas para incluirlas en el PCA\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inciso 7: Estudie si es posible hacer transformaciones en las variables categóricas para incluirlas en el PCA\n",
     "# Convertir variables categóricas a numéricas utilizando One-Hot Encoding\n",
     "df_categoricas = pd.get_dummies(df[categoricas], drop_first=True)\n",
     "\n",
     "# Combinar variables numéricas y categorizadas\n",
-    "df_final = pd.concat([df[numericas], df_categoricas], axis=1)\n"
+    "df_final = pd.concat([df[numericas], df_categoricas], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso 8: Estudie si es conveniente hacer un Análisis de Componentes Principales\n"
    ]
   },
   {
@@ -754,7 +803,6 @@
     }
    ],
    "source": [
-    "# Inciso 8: Estudie si es conveniente hacer un Análisis de Componentes Principales\n",
     "# Escalado de datos\n",
     "scaler = StandardScaler()\n",
     "df_scaled = scaler.fit_transform(df_final)\n",
@@ -777,6 +825,28 @@
     "# Determinar el número de componentes necesarios para explicar al menos el 90% de la varianza\n",
     "num_componentes = np.argmax(np.cumsum(explained_variance) >= 0.9) + 1\n",
     "print(f\"Número de componentes necesarios para explicar al menos el 90% de la varianza: {num_componentes}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso 9: Haga una presentación oral de sus resultados incluyendo conclusiones y limitaciones del estudio.\n",
+    "\n",
+    "Resumen:\n",
+    "En este estudio se realizó un análisis exploratorio del conjunto de datos de factores de riesgo de cáncer cervical.\n",
+    "Se encontraron varias variables con valores faltantes, los cuales fueron tratados utilizando técnicas de imputación.\n",
+    "Se realizó un Análisis de Componentes Principales (PCA) para reducir la dimensionalidad de los datos y se determinó que \n",
+    "se necesitan {num_componentes} componentes para explicar al menos el 90% de la varianza total.\n",
+    "\n",
+    "Conclusiones:\n",
+    "- La mayoría de las variables tienen baja correlación entre sí.\n",
+    "- Las transformaciones de variables categóricas a numéricas permitieron incluirlas en el análisis PCA.\n",
+    "- El PCA es útil para reducir la dimensionalidad y conservar la mayor parte de la información.\n",
+    "\n",
+    "Limitaciones:\n",
+    "- La imputación de valores faltantes puede introducir sesgos.\n",
+    "- La variabilidad en la calidad de los datos originales puede afectar los resultados del análisis."
    ]
   }
  ],
