--- a/lab1_final.ipynb
+++ b/lab1_final.ipynb
@@ -768,6 +768,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Sí, es posible hacer transformaciones en las variables categóricas para incluirlas en el Análisis de Componentes Principales (PCA). El método comúnmente utilizado para esta tarea es la codificación de variables categóricas en variables numéricas, lo cual se puede realizar mediante la técnica de One-Hot Encoding.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Inciso 8: Estudie si es conveniente hacer un Análisis de Componentes Principales\n"
    ]
   },
@@ -825,6 +833,19 @@
     "# Determinar el número de componentes necesarios para explicar al menos el 90% de la varianza\n",
     "num_componentes = np.argmax(np.cumsum(explained_variance) >= 0.9) + 1\n",
     "print(f\"Número de componentes necesarios para explicar al menos el 90% de la varianza: {num_componentes}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sí, es conveniente hacer un Análisis de Componentes Principales (PCA) en este caso debido a las siguientes razones:\n",
+    "\n",
+    "1. **Eficiencia**: Se necesitan 7 componentes principales para explicar al menos el 90% de la varianza, lo que reduce significativamente la cantidad de variables a manejar mientras se conserva la mayor parte de la información.\n",
+    "2. **Colinealidad**: PCA puede mejorar la eficacia de los modelos predictivos al eliminar la colinealidad entre las variables originales.\n",
+    "3. **Simplicidad**: Facilita el análisis posterior y la visualización al trabajar con menos variables.\n",
+    "\n",
+    "**Conclusión**: PCA es beneficioso para simplificar el conjunto de datos sin perder demasiada información, aunque se debe tener en cuenta que la interpretación de los componentes puede ser menos intuitiva que la de las variables originales."
    ]
   },
   {
