--- a/lab1_final.ipynb
+++ b/lab1_final.ipynb
@@ -769,6 +769,10 @@
    "metadata": {},
    "source": [
     "Sí, es posible hacer transformaciones en las variables categóricas para incluirlas en el Análisis de Componentes Principales (PCA). El método comúnmente utilizado para esta tarea es la codificación de variables categóricas en variables numéricas, lo cual se puede realizar mediante la técnica de One-Hot Encoding.\n",
+    "\n",
+    "La transformación de variables categóricas en variables numéricas mediante One-Hot Encoding permite incluir estas variables en el análisis de PCA. Esto es posible porque PCA requiere datos numéricos para calcular las componentes principales, y One-Hot Encoding convierte las categorías en una forma numérica que PCA puede procesar. Así, variables categóricas como \"Smokes\", \"Hormonal.Contraceptives\", etc., que originalmente eran no numéricas, ahora pueden ser incorporadas en el análisis de PCA junto con las variables numéricas.\n",
+    "\n",
+    "En conclusión, sí es posible y conveniente hacer transformaciones en las variables categóricas para incluirlas en el PCA utilizando técnicas como One-Hot Encoding. Esto permite un análisis más completo y aprovecha toda la información contenida en el dataset.\n",
     "\n"
    ]
   },
